force-ide/src/objects/TestList__c.object
<CustomObject>
    <label>TestList</label>
    <nameField>
        <displayFormat>TL-{0000}</displayFormat>
        <label>TestList Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TestLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completion_State__c</fullName>
        <label>Completion State</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>